feature: add mapped timeline entry
Depending on the entry type panels are displayed with a different colour.

* Also adjust .gitignore to ignore user settings.

--- a/src/Wko.BabyTracker.Web/Features/Timeline/Index.razor
+++ b/src/Wko.BabyTracker.Web/Features/Timeline/Index.razor
@@ -9,7 +9,7 @@
 
 @foreach (var entry in ViewModel.TimelineEntries)
 {
-    <TimelineEntry Entry="entry"/>
+    <TimelineEntry Entry="entry" Child="ViewModel.SelectedProfile"/>
 }
 
 @code {
