--- a/src/Wko.BabyTracker.Web/Features/Timeline/Components/TimelineEntry.razor
+++ b/src/Wko.BabyTracker.Web/Features/Timeline/Components/TimelineEntry.razor
@@ -1,12 +1,13 @@
 @using Wko.BabyTracker.Core.Dtos.Timeline
-<div class="card bg-info">
+@using Wko.BabyTracker.Core.Shared.Enums
+@using Wko.BabyTracker.Web.Globals
+@using Wko.BabyTracker.Core.Dtos.Profiles
+<div class="card @GetEntryStyle() py-4">
     <div class="card-header">
-        Sascha has eaten
+        @GetEntryTitle()
     </div>
     <div class="card-body">
-        <div>25 minutes ago</div>
-        <div>for 12 minutes, from 14:40 to 15:05</div>
-        <div>40 ml</div>
+        @Entry.Body
     </div>
 </div>
 
@@ -14,5 +15,34 @@
 
     [Parameter]
     public TimelineEntryDto Entry { get; set; } = new();
+    
+    [Parameter]
+    public ProfileDto Child { get; set; } = new();
+
+    private string GetEntryTitle()
+    {
+        return Entry.Type switch
+        {
+            TimelineEntryType.Feeding => string.Format(ApplicationLabels.Timeline_Title_Feeding, Child.FirstName),
+            TimelineEntryType.Sleep => "Sleep",
+            TimelineEntryType.Measure => "Measure",
+            TimelineEntryType.Milestone => "Milestone",
+            TimelineEntryType.Nappy => "Nappy",
+            _ => "Unknown"
+        };
+    }
+    
+    private string GetEntryStyle()
+    {
+        return Entry.Type switch
+        {
+            TimelineEntryType.Feeding => "bg-info",
+            TimelineEntryType.Sleep => "bg-success",
+            TimelineEntryType.Measure => "bg-warning",
+            TimelineEntryType.Milestone => "bg-primary",
+            TimelineEntryType.Nappy => "bg-secondary",
+            _ => "bg-secondary"
+        };
+    }
 
 }
