feature: add different panels for timeline types
Minor code cleanups as well as some refactorings for legibility.

--- a/src/Wko.BabyTracker.Web/Features/Timeline/Index.razor
+++ b/src/Wko.BabyTracker.Web/Features/Timeline/Index.razor
@@ -9,7 +9,10 @@
 
 @foreach (var entry in ViewModel.TimelineEntries)
 {
-    <TimelineEntry Entry="entry" Child="ViewModel.SelectedProfile"/>
+    <TimelineEntry Type="entry.Type">
+        <CardHeader>@ViewModel.GetEntryTitle(entry)</CardHeader>
+        <CardBody>@ViewModel.GetEntryBody(entry)</CardBody>
+    </TimelineEntry>
 }
 
 @code {
