--- a/src/Wko.BabyTracker.Web/Features/Timeline/Components/TimelineEntry.razor
+++ b/src/Wko.BabyTracker.Web/Features/Timeline/Components/TimelineEntry.razor
@@ -4,44 +4,34 @@
 @using Wko.BabyTracker.Core.Dtos.Profiles
 <div class="card @GetEntryStyle() py-4">
     <div class="card-header">
-        @GetEntryTitle()
+        @CardHeader
     </div>
     <div class="card-body">
-        @Entry.Body
+        @CardBody
     </div>
 </div>
 
 @code {
 
-    [Parameter]
-    public TimelineEntryDto Entry { get; set; } = new();
-    
-    [Parameter]
-    public ProfileDto Child { get; set; } = new();
+    [Parameter, EditorRequired]
+    public TimelineEntryType Type { get; set; } = TimelineEntryType.Default;
 
-    private string GetEntryTitle()
-    {
-        return Entry.Type switch
-        {
-            TimelineEntryType.Feeding => string.Format(ApplicationLabels.Timeline_Title_Feeding, Child.FirstName),
-            TimelineEntryType.Sleep => "Sleep",
-            TimelineEntryType.Measure => "Measure",
-            TimelineEntryType.Milestone => "Milestone",
-            TimelineEntryType.Nappy => "Nappy",
-            _ => "Unknown"
-        };
-    }
+    [Parameter, EditorRequired]
+    public RenderFragment CardHeader { get; set; } = default!;
+    
+    [Parameter, EditorRequired]
+    public RenderFragment CardBody { get; set; } = default!;
     
     private string GetEntryStyle()
     {
-        return Entry.Type switch
+        return Type switch
         {
             TimelineEntryType.Feeding => "bg-info",
             TimelineEntryType.Sleep => "bg-success",
             TimelineEntryType.Measure => "bg-warning",
             TimelineEntryType.Milestone => "bg-primary",
             TimelineEntryType.Nappy => "bg-secondary",
-            _ => "bg-secondary"
+            _ => "bg-light"
         };
     }
 
