feature: replace open-iconic with font awesome
Added custom colours for timeline entries.

--- a/src/Wko.BabyTracker.Web/Features/Shared/MainLayout.razor
+++ b/src/Wko.BabyTracker.Web/Features/Shared/MainLayout.razor
@@ -1,12 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
+<div class="page background">
     <div class="sidebar">
         <NavMenu/>
     </div>
 
     <main>
-        <div class="top-row px-4 auth">
+        <div class="top-row background-dark-50 px-4 auth">
             <LoginDisplay/>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
