--- a/src/Wko.BabyTracker.Web/wwwroot/css/site.css
+++ b/src/Wko.BabyTracker.Web/wwwroot/css/site.css
@@ -1,5 +1,3 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
-
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -10,6 +8,13 @@ h1:focus {
 
 a, .btn-link {
     color: #0071c1;
+}
+
+.background {
+    background-color: var(--primary-bg-dark);
+}
+.background-dark-50 {
+    background-color: rgba(19, 21, 29, 0.5) !important;
 }
 
 .btn-primary {
