--- a/src/Wko.BabyTracker.Web/Features/Host/_Host.cshtml
+++ b/src/Wko.BabyTracker.Web/Features/Host/_Host.cshtml
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="fontawesomefree/css/all.min.css" type="text/css"/>
+    <link href="css/colours.css" rel="stylesheet"/>
     <link href="css/site.css" rel="stylesheet"/>
     <link href="Wko.BabyTracker.Web.styles.css" rel="stylesheet"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
