--- a/src/Wko.BabyTracker.Web/Features/Shared/MainLayout.razor
+++ b/src/Wko.BabyTracker.Web/Features/Shared/MainLayout.razor
@@ -5,13 +5,8 @@
         <NavMenu/>
     </div>
 
-    <main>
-        <div class="top-row background-dark-50 px-4 auth">
-            <LoginDisplay/>
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+    <main class="overflow-scroll">
+        <article class="content px-4 text-white-50">
             @Body
         </article>
     </main>
