--- a/src/Wko.BabyTracker.Web/Features/Shared/NavMenu.razor
+++ b/src/Wko.BabyTracker.Web/Features/Shared/NavMenu.razor
@@ -8,23 +8,25 @@
 </div>
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
+    <nav class="d-flex flex-column align-items-stretch h-100">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <i class="fa-solid fa-home" aria-hidden="true"></i><span>Home</span>
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="profiles">
-                <span class="oi oi-plus" aria-hidden="true"></span> Profiles
+                <i class="fa-solid fa-people-group" aria-hidden="true"></i><span>Profiles</span>
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="timeline">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Timeline
+                <i class="fa-solid fa-timeline" aria-hidden="true"></i><span>Timeline</span>
             </NavLink>
         </div>
+        <div class="nav-item mt-auto px-3"><LoginDisplay /></div>
     </nav>
+    
 </div>
 
 @code {
