--- a/src/Wko.BabyTracker/Features/Shared/MainLayout.razor
+++ b/src/Wko.BabyTracker/Features/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
         <NavMenu/>
     </div>
 
-    <main class="overflow-scroll">
+    <main class="overflow-auto">
         <article class="content px-4 text-white-50">
             @Body
         </article>
