feature: adjust dexie access
Introduce Daos for Child and Timeline Entries
Change Id from Guid to Int since no serverside persistence takes place

--- a/src/Wko.BabyTracker/Features/Profiles/Index.razor
+++ b/src/Wko.BabyTracker/Features/Profiles/Index.razor
@@ -20,7 +20,7 @@
         Profiles = await Dispatcher.QueryAsync(new GetFamilyProfiles());
     }
 
-    private void NavigateTo(Guid id)
+    private void NavigateTo(int id)
     {
         NavigationManager.NavigateTo($"timeline/{id}");
     }
