feature: adjust js exported repositories
Also adjust bundling into es modules
Change Ids back to guid due to lacking auto increment

--- a/src/Wko.BabyTracker/Features/Profiles/Index.razor
+++ b/src/Wko.BabyTracker/Features/Profiles/Index.razor
@@ -20,7 +20,7 @@
         Profiles = await Dispatcher.QueryAsync(new GetFamilyProfiles());
     }
 
-    private void NavigateTo(int id)
+    private void NavigateTo(Guid id)
     {
         NavigationManager.NavigateTo($"timeline/{id}");
     }
