--- a/src/Wko.BabyTracker/Features/Profiles/Index.razor
+++ b/src/Wko.BabyTracker/Features/Profiles/Index.razor
@@ -8,20 +8,17 @@
 {
     <NavLink @onclick="() => NavigateTo(profile.Id)">
         <div>@profile.FirstName</div>
-        <div>@profile.FamilyName</div>
+        <div>@profile.AgeInDays</div>
     </NavLink>
 }
 
 @code {
-    private IReadOnlyList<ProfileDto> Profiles { get; set; } = new List<ProfileDto>();
+    private IEnumerable<ProfileDto> Profiles { get; set; } = new List<ProfileDto>();
 
     protected override async Task OnInitializedAsync()
     {
         Profiles = await Dispatcher.QueryAsync(new GetFamilyProfiles());
     }
 
-    private void NavigateTo(Guid id)
-    {
-        NavigationManager.NavigateTo($"timeline/{id}");
-    }
+    private void NavigateTo(Guid id) => NavigationManager.NavigateTo($"timeline/{id}");
 }
