added Notification ui system

--- a/src/Wko.BabyTracker/Features/Profiles/Index.razor
+++ b/src/Wko.BabyTracker/Features/Profiles/Index.razor
@@ -1,8 +1,6 @@
 @page "/profiles"
-@using Wko.BabyTracker.Core.Dtos.Profiles
-@using Wko.BabyTracker.Core.Queries.Family
-@inject IDispatcher Dispatcher
-@inject NavigationManager NavigationManager
+@inherits IndexBase
+
 <h3>Profiles</h3>
 @foreach (var profile in Profiles)
 {
@@ -10,15 +8,4 @@
         <div>@profile.FirstName</div>
         <div>@profile.AgeInDays</div>
     </NavLink>
-}
-
-@code {
-    private IEnumerable<ProfileDto> Profiles { get; set; } = new List<ProfileDto>();
-
-    protected override async Task OnInitializedAsync()
-    {
-        Profiles = await Dispatcher.QueryAsync(new GetFamilyProfiles());
-    }
-
-    private void NavigateTo(Guid id) => NavigationManager.NavigateTo($"timeline/{id}");
 }
