--- a/src/Wko.BabyTracker/_Imports.razor
+++ b/src/Wko.BabyTracker/_Imports.razor
@@ -11,3 +11,4 @@
 @using Wko.BabyTracker.Features.Home
 @using Wko.BabyTracker.Features.Shared
 @using Wko.BabyTracker.Core.Services
+@using Wko.BabyTracker.Core.Notification
