--- a/src/Wko.BabyTracker/Features/Timeline/Components/TimelineEntry.razor
+++ b/src/Wko.BabyTracker/Features/Timeline/Components/TimelineEntry.razor
@@ -5,6 +5,7 @@
     <div class="card-header card-header-rounded d-flex align-items-center @GetEntryHeaderStyle()">
         <div class="card-icon text-black-50">@GetEntryIcon()</div>
         <div class="entry-title">@CardHeader</div>
+        <div class="card-edit" @onclick="OnEdit">&#8942;</div>
     </div>
     <div class="card-body">@CardBody</div>
 </div>
@@ -19,6 +20,8 @@
 
     [Parameter, EditorRequired]
     public RenderFragment CardBody { get; set; } = default!;
+    
+    [Parameter] public EventCallback OnEdit { get; set; }
 
     private string GetEntryStyle()
     {
