--- a/src/Wko.BabyTracker/Features/Timeline/Components/TimelineEntry.razor.css
+++ b/src/Wko.BabyTracker/Features/Timeline/Components/TimelineEntry.razor.css
@@ -27,6 +27,23 @@
     margin-left: 1.1em;
 }
 
+.card-edit {
+    margin-left: auto;
+    cursor: pointer;
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-edit:hover {
+    background-color: #e3e3e3;
+    color: rgba(0, 0, 0, 0.5);
+    transition: background-color 0.2s ease-in-out;
+}
+
 .bg-measure {
     background-color: var(--measure-primary);
 }
