--- a/src/Wko.BabyTracker/wwwroot/css/colours.css
+++ b/src/Wko.BabyTracker/wwwroot/css/colours.css
@@ -20,4 +20,6 @@
     --measure-primary: #527B78;
     --measure-primary-header: #4A6B69;
     --measure-secondary: #385553;
+    
+    --fab-primary: #E91E63;
 }
