--- a/src/Wko.BabyTracker/Features/Profiles/AddProfile.razor
+++ b/src/Wko.BabyTracker/Features/Profiles/AddProfile.razor
@@ -10,13 +10,18 @@
 
 <div>
     // Form
-    <EditForm Model="ViewModel" OnValidSubmit="HandleNewProfile">
+    <EditForm Model="ViewModel" OnValidSubmit="HandleNewProfile" class="form">
         <DataAnnotationsValidator/>
-        
-        <InputText @bind-Value="ViewModel.Name">Firstname</InputText>
-        <ValidationMessage For="() => ViewModel.Name"/>
-        <InputDate @bind-Value="ViewModel.BirthDate">Birthdate</InputDate>
-        <button type="submit">Save</button>
+        <div class="mb-3">
+            <label for="Name" class="form-label">Name</label>
+            <InputText id="Name" @bind-Value="ViewModel.Name" class="form-control"/>
+            <ValidationMessage For="() => ViewModel.Name" class="form-text"/>
+        </div>
+        <div class="mb-3">
+            <label for="Birthdate" class="form-label">Birthdate</label>
+            <InputDate id="Birthdate" @bind-Value="ViewModel.BirthDate" class="form-control">Birthdate</InputDate>
+        </div>
+        <div class="btn-group"><button type="submit" class="btn btn-primary">Save</button></div>
     </EditForm>
 </div>
 
@@ -26,14 +31,14 @@
 @code {
 
     private NewProfileViewModel ViewModel { get; set; } = new();
-    private void HandleFabClick() => NavigationManager.NavigateTo("/profiles/");
+    private void HandleFabClick() => NavigationManager.NavigateTo("profiles/");
 
     private async Task HandleNewProfile()
     {
         try
         {
             await Dispatcher.ExecuteAsync(ViewModel.ToCommand());
-            NavigationManager.NavigateTo("/profiles/");
+            NavigationManager.NavigateTo("profiles/");
         }
         catch (Exception e)
         {
